# AuraLite-Physics-Engine

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  deny.toml  scenes.html
.github/workflows/: ci.yml
benches/: soa_vs_aos.rs
benches/results/: linux-x86_64-geometry-m2.txt  linux-x86_64-math.txt  linux-x86_64-rigid.txt
crates/auralite-collision/: Cargo.toml
crates/auralite-collision/src/: ccd.rs  filter.rs  gjk.rs  lib.rs  narrow.rs  tree.rs
crates/auralite-core/: Cargo.toml
crates/auralite-core/benches/: soa_vs_aos.rs
crates/auralite-core/src/: lib.rs
crates/auralite-dynamics/: Cargo.toml
crates/auralite-dynamics/examples/: benchmark.rs  falling.rs  stacking2d.rs
crates/auralite-dynamics/src/: joints.rs  lib.rs  lockstep.rs
crates/auralite-dynamics/tests/: integration_tests.rs
crates/auralite-ffi/: Cargo.toml  auralite.h
crates/auralite-ffi/c_example/: main.c
crates/auralite-ffi/src/: lib.rs
crates/auralite-fuzz/: Cargo.toml
crates/auralite-fuzz/src/: main.rs
crates/auralite-geometry/: Cargo.toml
crates/auralite-geometry/examples/: geometry_benchmark.rs
crates/auralite-geometry/src/: advanced.rs  lib.rs
crates/auralite-gpu/: Cargo.toml
crates/auralite-gpu/src/: lib.rs
crates/auralite-gpu/src/shaders/: pbf_fluid.wgsl
crates/auralite-math/: Cargo.toml
crates/auralite-math/examples/: math_benchmark.rs
crates/auralite-math/src/: lib.rs  simd.rs
crates/auralite-particles/: Cargo.toml
crates/auralite-particles/src/: lib.rs
crates/auralite-sandbox/: Cargo.toml
crates/auralite-sandbox/src/: interactive.rs  main.rs  replay.rs  visualizer.rs
crates/auralite-serialize/: Cargo.toml
crates/auralite-serialize/src/: lib.rs
crates/auralite-softbody/: Cargo.toml
crates/auralite-softbody/src/: lib.rs
crates/auralite-vehicles/: Cargo.toml
crates/auralite-vehicles/src/: lib.rs
docs/: architecture.md  benchmark-report.md  build-platforms.md  dependencies.md  final-report.md  known-limitations.md  numerical-stability.md  platform-support.md  progress.md  requirements-traceability.md  risk-register.md  shapes-and-geometry.md  test-report.md  testing-conventions.md  toolchain.md  unsafe-inventory.md
docs/adr/: 01-decision.md  02-decision.md  03-decision.md  04-decision.md  05-decision.md  06-decision.md  07-decision.md  08-decision.md  09-decision.md  10-decision.md  11-decision.md  12-decision.md  13-decision.md  14-decision.md  15-decision.md  16-decision.md  17-decision.md
docs/guides/: api-guide.md  character-controllers.md  collision-queries.md  constraints.md  determinism.md  dynamics.md  ffi-guide.md  gpu-acceleration.md  multithreading.md  particles-fluids.md  performance.md  quick-start.md  sandbox.md  serialization.md  softbody-cloth.md  tutorial-2d.md  tutorial-3d.md  vehicles.md
release/: README.txt
release/visualizer/: scenes.html
scripts/: build-android.sh  build-ios.sh  ci-local.sh
tests/: integration_tests.rs
