[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
rust-version = "1.97"
authors = ["AuraLite contributors"]

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
all = "deny"

[profile.release]
lto = "thin"
codegen-units = 1

[profile.bench]
debug = true
