[package]
name = "auralite-softbody"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
auralite-math = { path = "../auralite-math" }
auralite-core = { path = "../auralite-core" }
auralite-geometry = { path = "../auralite-geometry" }
auralite-collision = { path = "../auralite-collision" }
auralite-dynamics = { path = "../auralite-dynamics" }

[lints]
workspace = true
